# akari-helper

./: .gitignore  .prettierignore  AGENTS.md  Akari.md  README.md  eslint.config.js  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
py/: AGENTS.md  README.md  check.sh  classify_cells.py  extract_grid.py  generate_typescript.py  pyproject.toml  screenshots_to_typescripts.py  split_grid.py  validate_classifications.py
py/akari_puzzles/: __init__.py  classify.py  grid.py  images.py  typescript.py
screenshots/assets/validation/: known_values.json
scripts/: check.sh  generate_plaintext_puzzles.py
src/: App.css  App.test.tsx  App.tsx  main.tsx
src/game/components/: BoardView.tsx  CellView.tsx  ControlButton.tsx  GameControls.tsx  GameView.tsx  PuzzleSelector.tsx  SolverAnalysis.tsx  SolverControls.tsx  SolverHistory.tsx  SolverView.tsx  XMark.tsx
src/game/model/: BoardState.ts  Cell.ts  CellIndex.ts  GameState.ts  board.ts  game.ts
src/game/model/v2/: BoardState.ts  Index.ts
src/game/rules/: coreRules.ts
src/game/solver/: l0.ts  l1.ts  l2.ts  techniques.ts
src/puzzles/: generatedPlaintext.ts  library.test.ts  library.ts  plaintext.ts
src/utils/: lists.ts  scanner.ts
