[project]
name = "akari-puzzle-tools"
version = "0.1.0"
description = "Screenshot parsing tools for akari-helper puzzle imports."
requires-python = ">=3.9"
dependencies = [
    "pillow>=11.3.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [".venv"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
files = ["."]
exclude = ["\\.venv"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
